# kart-bar-chart-race

./: .gitignore  LICENSE  README.md  app.py  index.html  main.py  pyproject.toml
data_import/: import_data.py
data_print/: print_race_evolution.py
data_process/: process_race_data.py
